--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+}
+
 .carrousel {
   position: absolute;
   transform: scale(0);
@@ -28,25 +32,31 @@
   transition: transform 0.25s;
 }
 
-.carrousel__figure {
+.carrousel__form {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
   width: 100%;
-  height: 100%;
+}
+
+.carrousel__figure {
+  width: 90%;
+  height: 90%;
+}
+
+figure {
+  padding: none;
 }
 
 .carrousel__img {
   position: absolute;
-  top: 0;
-  left: -50%;
-  width: 100%;
-  height: 100%;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
   object-fit: cover;
-}
-
-carrousel__radio {
-  position: absolute;
-  top: 0;
-  left: -50%;
-  width: 10%;
-  height: 10%;
-  border: 1px solid red;
 }
